fix(pricing): fixed adaptive gap on small screen

--- a/styles/_pricing.scss
+++ b/styles/_pricing.scss
@@ -234,12 +234,14 @@
         gap: 2rem;
 
         &-2 {
+          gap: 2rem;
           &__radio-container {
             flex-wrap: wrap;
           }
         }
 
         &-3 {
+          gap: 2rem;
           &__radio-container {
             flex-direction: column;
           }
